[package]
name = "wrpt"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A minimal Portainer cli built with Rust"
readme = "README.md"
keywords = ["portainer", "cli", "deploy", "docker", "swarm"]
categories = ["command-line-utilities"]
repository = "https://github.com/Wahib-L/wrpt"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
const_format = "0.2.34"
reqwest = { version = "0.12.9" , features = ["blocking", "json"] }
anstyle = "1.0.10"
log = "0.4.22"
simplelog = { version = "^0.12.2", features = ["paris"] }
log_err = "1.1.1"
serde_json = "1.0.134"
prettytable-rs = "0.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
chrono = { version = "0.4.39", features = ["serde"] }
